Add link to documentation in README file

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Documentation Status](https://readthedocs.org/projects/sklearn-quantile/badge/?version=latest)](https://sklearn-quantile.readthedocs.io/en/latest/?badge=latest)
+
 This module provides quantile machine learning models for python, in a plug-and-play fashion in the sklearn environment.
 This means that practically the only dependency is sklearn and all its functionality is applicable to the here provided
 models without code changes.
