Major overhaul of the implementation. All classes are now linked and their shared behaviour tested. Some bugs are removed from the weighted_quantile implementation. Tests are rewritten and cover now most of the code.

--- a/docs/source/notebooks/example_qrf.ipynb
+++ b/docs/source/notebooks/example_qrf.ipynb
@@ -196,7 +196,7 @@
     "    min_samples_leaf=4,\n",
     "    min_samples_split=4,\n",
     ")\n",
-    "qrf = RandomForestQuantileRegressor(**common_params, quantiles=[0.05, 0.5, 0.95])\n",
+    "qrf = RandomForestQuantileRegressor(**common_params, q=[0.05, 0.5, 0.95])\n",
     "qrf.fit(X_train, y_train)"
    ],
    "metadata": {
@@ -702,7 +702,7 @@
     "    alpha=q,\n",
     "    greater_is_better=False,  # maximize the negative loss\n",
     ")\n",
-    "qrf = RandomForestQuantileRegressor(random_state=0, quantiles=q)\n",
+    "qrf = RandomForestQuantileRegressor(random_state=0, q=q)\n",
     "search_05p = RandomizedSearchCV(\n",
     "    qrf,\n",
     "    param_grid,\n",
@@ -764,7 +764,7 @@
     "    greater_is_better=False,  # maximize the negative loss\n",
     ")\n",
     "search_95p = clone(search_05p).set_params(\n",
-    "    estimator__quantiles=q,\n",
+    "    estimator__q=q,\n",
     "    scoring=neg_mean_pinball_loss_95p_scorer,\n",
     ")\n",
     "search_95p.fit(X_train, y_train)\n",
